[gd_scene load_steps=16 format=3 uid="uid://37l1d2igoh02"]

[ext_resource type="AudioStream" uid="uid://bcgwptont7oii" path="res://asset/Sound/Sound_SFX/New game sound effect.ogg" id="1_bt713"]
[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_crvw1"]
[ext_resource type="Texture2D" uid="uid://basqecjp42yoy" path="res://asset/Visuals_Backgrounds/big_01_space_g.png" id="1_u5set"]
[ext_resource type="Texture2D" uid="uid://bejp4jyinrp00" path="res://asset/SystVisuals_Config&UI/Pic_TitleScreen/quit.png" id="2_84tfd"]
[ext_resource type="PackedScene" uid="uid://d03rfxvcf4oua" path="res://scenes/snl_scene/snl_scene.tscn" id="2_bhq7e"]
[ext_resource type="Texture2D" uid="uid://ba0wadsrhnvlh" path="res://asset/SystVisuals_Config&UI/Pic_Buttons/start.png" id="3_gevkv"]
[ext_resource type="PackedScene" uid="uid://c6ub26luiwi3q" path="res://scenes/sound_scene.tscn" id="3_is3la"]
[ext_resource type="Texture2D" uid="uid://cx2dy10ushvq3" path="res://asset/Visuals_Backgrounds/black.png" id="3_wddxs"]
[ext_resource type="PackedScene" uid="uid://df7j7m38bm4gg" path="res://scenes/continue_scene.tscn" id="4_dr4fp"]
[ext_resource type="Texture2D" uid="uid://coqjre35x5ygv" path="res://asset/SystVisuals_Config&UI/Pic_Buttons/continue.png" id="4_vv7lh"]
[ext_resource type="Texture2D" uid="uid://ccphb83j66q16" path="res://asset/SystVisuals_Config&UI/Pic_Buttons/music.png" id="5_d58t5"]
[ext_resource type="PackedScene" uid="uid://ci4qpe1erm6up" path="res://scenes/gallery_menu.tscn" id="5_iukc0"]
[ext_resource type="Texture2D" uid="uid://gappt6tic2uu" path="res://asset/SystVisuals_Config&UI/Pic_TitleScreen/gallery.png" id="6_ougqv"]
[ext_resource type="Texture2D" uid="uid://5ns6xe5x0ecy" path="res://asset/SystVisuals_Config&UI/Logo.png" id="7_ieffn"]
[ext_resource type="Texture2D" uid="uid://ctii5thwcs31p" path="res://asset/SystVisuals_Config&UI/SystButtons/fullscreen.png" id="9_at87j"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_crvw1")
play_scene = ExtResource("2_bhq7e")
sound = ExtResource("3_is3la")
continue_scene = ExtResource("4_dr4fp")
gallery_scene = ExtResource("5_iukc0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="background" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_u5set")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -36.0
offset_right = 64.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_wddxs")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -178.44
offset_top = 2.995
offset_right = 377.56
offset_bottom = 391.995
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.65, 0.65)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BtStart" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_gevkv")
flat = true

[node name="BtContinue" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("4_vv7lh")
flat = true

[node name="BtMusic" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("5_d58t5")
flat = true

[node name="BtGallery" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("6_ougqv")
flat = true

[node name="TitleGame" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -168.33
offset_right = -20.0
offset_bottom = -168.33
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.645, 0.645)
texture = ExtResource("7_ieffn")
expand_mode = 1
stretch_mode = 3

[node name="BtQuit" type="Button" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_right = 30.0
offset_bottom = 96.0
grow_horizontal = 0
scale = Vector2(0.72, 0.72)
icon = ExtResource("2_84tfd")
flat = true

[node name="BtScreen" type="Button" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -76.0
offset_top = -76.0
offset_right = 76.0
offset_bottom = 76.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.505, 0.505)
icon = ExtResource("9_at87j")
flat = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_bt713")
autoplay = true

[connection signal="pressed" from="CanvasLayer/VBoxContainer/BtStart" to="." method="_on_bt_start_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/BtContinue" to="." method="_on_bt_continue_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/BtMusic" to="." method="_on_bt_music_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/BtGallery" to="." method="_on_bt_gallery_pressed"]
[connection signal="pressed" from="CanvasLayer/BtQuit" to="." method="_on_bt_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/BtScreen" to="." method="_on_bt_screen_pressed"]
